[gd_scene load_steps=12 format=3 uid="uid://b5lb1tvdgo8bs"]

[ext_resource type="Script" path="res://scenes/designer/designer.gd" id="1_cnsm1"]
[ext_resource type="Texture2D" uid="uid://r5a2n02urait" path="res://scenes/designer/pfp/circle.png" id="3_hhvw3"]
[ext_resource type="Script" path="res://scenes/designer/Profile.gd" id="3_q780q"]
[ext_resource type="Texture2D" uid="uid://b7nyt0hi8h6v8" path="res://scenes/designer/pfp/sharp.png" id="4_3h3sm"]
[ext_resource type="Texture2D" uid="uid://boq53g1w5jm3l" path="res://scenes/designer/pfp/squircle.png" id="5_1movv"]
[ext_resource type="FontFile" uid="uid://cjv1vvch4cmpp" path="res://Roboto/Roboto-Bold.ttf" id="6_4inxl"]
[ext_resource type="FontFile" uid="uid://cw7d3rd011lmw" path="res://Roboto/Roboto-Regular.ttf" id="7_0p8lt"]
[ext_resource type="Texture2D" uid="uid://e12ocbn4k0p4" path="res://scenes/designer/banner/round.png" id="9_ruc2c"]
[ext_resource type="Texture2D" uid="uid://dl2xg8fk4gedj" path="res://scenes/designer/media/mediasquare.png" id="10_i2bsj"]
[ext_resource type="Texture2D" uid="uid://brw433lo7r8fa" path="res://scenes/designer/banner/square.png" id="10_jmyac"]
[ext_resource type="Texture2D" uid="uid://blbspgp3ksuvx" path="res://scenes/designer/media/mediaround.png" id="11_63gqo"]

[node name="Designer" type="Control" node_paths=PackedStringArray("backgroundPickerBtn", "pf")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cnsm1")
backgroundPickerBtn = NodePath("SelectorSidebar/bgPanel/bgColour")
pf = NodePath("Profile")

[node name="SelectorSidebar" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 288.0
offset_bottom = 643.0

[node name="bgPanel" type="Panel" parent="SelectorSidebar"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Label" type="Label" parent="SelectorSidebar/bgPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 97.0
offset_bottom = 27.0
text = "Background"

[node name="bgColour" type="ColorPickerButton" parent="SelectorSidebar/bgPanel"]
layout_mode = 0
offset_left = 122.0
offset_right = 283.0
offset_bottom = 31.0
color = Color(0.321569, 0.266667, 0.415686, 1)
edit_alpha = false

[node name="bgPanel2" type="Panel" parent="SelectorSidebar"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Label" type="Label" parent="SelectorSidebar/bgPanel2"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 114.0
offset_bottom = 27.0
text = "Profile Picture"

[node name="pfpRounding" type="OptionButton" parent="SelectorSidebar/bgPanel2"]
layout_mode = 0
offset_left = 122.0
offset_right = 283.0
offset_bottom = 31.0
item_count = 3
selected = 0
popup/item_0/text = "Rounded"
popup/item_0/id = 0
popup/item_1/text = "Squircle"
popup/item_1/id = 1
popup/item_2/text = "Sharp"
popup/item_2/id = 2

[node name="bgPanel3" type="Panel" parent="SelectorSidebar"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Label" type="Label" parent="SelectorSidebar/bgPanel3"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 114.0
offset_bottom = 27.0
text = "Banner"

[node name="bannerRounding" type="OptionButton" parent="SelectorSidebar/bgPanel3"]
layout_mode = 0
offset_left = 122.0
offset_right = 283.0
offset_bottom = 31.0
item_count = 2
selected = 0
popup/item_0/text = "Rounded"
popup/item_0/id = 0
popup/item_1/text = "Sharp"
popup/item_1/id = 2

[node name="bgPanel4" type="Panel" parent="SelectorSidebar"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Label" type="Label" parent="SelectorSidebar/bgPanel4"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 114.0
offset_bottom = 27.0
text = "Media"

[node name="mediaRounding" type="OptionButton" parent="SelectorSidebar/bgPanel4"]
layout_mode = 0
offset_left = 122.0
offset_right = 283.0
offset_bottom = 31.0
item_count = 2
selected = 1
popup/item_0/text = "Rounded"
popup/item_0/id = 0
popup/item_1/text = "Sharp"
popup/item_1/id = 2

[node name="Save" type="Button" parent="SelectorSidebar"]
layout_mode = 2
text = "Save CSS file"

[node name="Folder" type="Button" parent="SelectorSidebar"]
layout_mode = 2
text = "Open folder"

[node name="Exit" type="Button" parent="SelectorSidebar"]
layout_mode = 2
text = "Exit editor (save first!)"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 440.0
offset_right = 1022.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.247059)

[node name="ExampleText" type="Label" parent="."]
layout_mode = 2
offset_left = 452.0
offset_top = 334.0
offset_right = 1022.0
offset_bottom = 469.0
theme_override_fonts/font = ExtResource("7_0p8lt")
text = "This is a post. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pulvinar neque nibh, sit amet facilisis felis volutpat vitae. Vestibulum venenatis tristique diam id sodales. Fusce feugiat ut ex a vulputate. In interdum sapien vitae purus vulputate, in faucibus sapien mattis. This is a piece of media (E.g. an image or video)"
autowrap_mode = 2

[node name="Profile" type="Node2D" parent="."]
position = Vector2(507, 269)
script = ExtResource("3_q780q")

[node name="Circle" type="Sprite2D" parent="Profile"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_hhvw3")

[node name="Sharp" type="Sprite2D" parent="Profile"]
visible = false
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_3h3sm")

[node name="Squircle" type="Sprite2D" parent="Profile"]
visible = false
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_1movv")

[node name="Label" type="Label" parent="Profile"]
offset_left = 62.0
offset_top = -38.0
offset_right = 182.0
offset_bottom = -9.0
theme_override_fonts/font = ExtResource("6_4inxl")
theme_override_font_sizes/font_size = 24
text = "Your Name"

[node name="Label2" type="Label" parent="Profile"]
offset_left = 62.0
offset_top = -6.0
offset_right = 498.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("7_0p8lt")
theme_override_font_sizes/font_size = 16
text = "This is your bio! Hi, I'm me. Lorem ipsum dolor sit amet, consectetur adipiscing elit. "
autowrap_mode = 2

[node name="Round" type="Sprite2D" parent="Profile"]
position = Vector2(223, -153)
scale = Vector2(0.347363, 0.347363)
texture = ExtResource("9_ruc2c")

[node name="Square" type="Sprite2D" parent="Profile"]
visible = false
position = Vector2(223, -153)
scale = Vector2(0.347, 0.347)
texture = ExtResource("10_jmyac")

[node name="squareMedia" type="Sprite2D" parent="Profile"]
position = Vector2(36, 276)
scale = Vector2(0.353815, 0.353815)
texture = ExtResource("10_i2bsj")

[node name="roundMedia" type="Sprite2D" parent="Profile"]
position = Vector2(36, 276)
scale = Vector2(0.353815, 0.353815)
texture = ExtResource("11_63gqo")

[connection signal="color_changed" from="SelectorSidebar/bgPanel/bgColour" to="." method="_on_bg_colour_color_changed"]
[connection signal="item_selected" from="SelectorSidebar/bgPanel2/pfpRounding" to="." method="_on_pfp_rounding_item_selected"]
[connection signal="item_selected" from="SelectorSidebar/bgPanel3/bannerRounding" to="." method="_on_banner_rounding_item_selected"]
[connection signal="item_selected" from="SelectorSidebar/bgPanel4/mediaRounding" to="." method="_on_media_rounding_item_selected"]
[connection signal="pressed" from="SelectorSidebar/bgPanel4/mediaRounding" to="." method="_on_media_rounding_pressed"]
[connection signal="pressed" from="SelectorSidebar/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="SelectorSidebar/Folder" to="." method="_on_folder_pressed"]
